8213232 causes crashes on solaris sparc64

XMLWordPrintable

    • b21
    • 13
    • b33
    • sparc
    • solaris
    • Not verified

        8213232 isn't good for Solaris sparc64

        this code from 8213232 :

        #if defined(_LP64) && !defined(_LITTLE_ENDIAN)
         // XIMPreeditState value which is used for XGetICValues must be 32bit on BigEndian XOrg's xlib
         unsigned int state = XIMPreeditUnKnown;
        #else
         XIMPreeditState state = XIMPreeditUnKnown;
        #endif

        results in unaligned access to 32-bit state object in xiimp.so library
        C [xiiimp.so.2+0x286c8] _Ximp_PreGetAttributes+0x740
        C [xiiimp.so.2+0x28a3c] _Ximp_Local_GetICValues+0x2d0
        C [libX11.so.4+0xec5c0] XGetICValues+0x64
        C [libawt_xawt.so+0x50c14] Java_sun_awt_X11InputMethodBase_isCompositionEnabledNative+0xcc

        siginfo: si_signo: 10 (SIGBUS), si_code: 1 (BUS_ADRALN), si_addr: 0xffffffff393fb8cc

        Solaris sparc64 should probably go this route as well
        XIMPreeditState state

        But i'm no expert in XInputMethod to be 100% sure

              Assignee:
              Ichiroh Takiguchi
              Reporter:
              Vladimir Kempik
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: