8227919: 8213232 causes crashes on solaris sparc64

Reviewed-by: prr, vkempik